test-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'

Resources:
  PrismDemoTestInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08e2d37b6a0129927
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref HTTPSecurityGroup
      Tags:
        - Key: git_last_modified_by
          Value: pvondemhagen@yahoo.com
        - Key: git_last_modified_at
          Value: "2023-02-03 19:36:50"
        - Key: git_file
          Value: test-stack.yaml
        - Key: git_commit
          Value: b339f15c91d433b28f25a956692bf92cf26174b4
        - Key: yor_trace
          Value: 6028e7f8-d694-4b20-a6e6-564a9ea625a2
        - Key: git_repo
          Value: aws_cloud_formation_5
        - Key: git_org
          Value: pvondemhagen
        - Key: git_modifiers
          Value: pvondemhagen
  HTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable port 80  and port 443
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      Tags:
        - Key: git_repo
          Value: aws_cloud_formation_5
        - Key: git_org
          Value: pvondemhagen
        - Key: git_modifiers
          Value: pvondemhagen
        - Key: git_last_modified_by
          Value: pvondemhagen@yahoo.com
        - Key: git_last_modified_at
          Value: "2023-02-03 19:36:50"
        - Key: git_file
          Value: test-stack.yaml
        - Key: git_commit
          Value: b339f15c91d433b28f25a956692bf92cf26174b4
        - Key: yor_trace
          Value: 8a5c70bc-d989-4c3f-9130-33fdd8de28c1
